--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript-Object</title>
+    <script src="./JavaScript-Cls-One/main.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript-Object</title>
-</head>
+  <body>
+    <!-- <script src="./script.js">
 
-<body>
-  <script src="./script.js">
-
-  </script>
-</body>
-
+  </script> -->
+  </body>
 </html>
