--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript-Object</title>
-    <script src="./JavaScript-Cls-One/main.js"></script>
+    <script src="./JavaScript-Cls-8/index.js"></script>
   </head>
 
   <body>
