--- a/js-recap-fun/index.html
+++ b/js-recap-fun/index.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript-Object</title>
-    <script src="script.js"></script>
+    <title>js-recap-fun</title>
+    <script src="./script.js" defer></script>
   </head>
-
-  <body>
-    <!-- <script src="./script.js">
-
-  </script> -->
-  </body>
+  <body></body>
 </html>
